# co-noir-on-chain-verify-example

./: .gitignore  README.md  run.sh
cache/: solidity-files-cache.json
prover/: Cargo.toml
