[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.1"
co-noir = { git = "https://github.com/TaceoLabs/co-snarks", branch = "main" }
co-ultrahonk = { git = "https://github.com/TaceoLabs/co-snarks", branch = "main" }
rustls = "0.23.28"
color-eyre = "0.6.5"
tracing-subscriber = "0.3.19"
ark-bn254 = "^0.5.0"
ark-ff = "0.5.0"
num-bigint = "0.4.6"
rand = "0.8.3"
